fix: height overflow

--- a/css/modal.css
+++ b/css/modal.css
@@ -21,7 +21,7 @@
     position: relative;
     width: 50%;
     min-width: 350px;
-    height: 90%;
+    height: auto;
 }
 
 @keyframes modal{
